[gd_scene load_steps=4 format=3 uid="uid://5v803ajjikep"]

[ext_resource type="Script" path="res://Code/Obstacles/pot_hole.gd" id="1_l5nw8"]
[ext_resource type="TileSet" uid="uid://ctb0cwkl7fnqv" path="res://Data/parking_tileset.tres" id="1_l8c1h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k1e7m"]
radius = 8.0

[node name="PotHole" type="Area2D"]
collision_mask = 2
script = ExtResource("1_l5nw8")

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k1e7m")

[node name="hole1" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, 8)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 10, 0, 1, 0, 0, 0)
tile_set = ExtResource("1_l8c1h")

[node name="hole2" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, 8)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 11, 0, 1, 0, 0, 0)
tile_set = ExtResource("1_l8c1h")

[node name="hole3" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, 8)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 12, 0, 1, 0, 0, 0)
tile_set = ExtResource("1_l8c1h")
